# sourcegraph

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  package.json  pnpm-lock.yaml  sg.config.yaml  sweep.yaml
.aspect/workflows/: config.yaml
.buildkite/hooks/: post-checkout
client/branded/src/search-ui/input/: BaseCodeMirrorQueryInput.tsx  CodeMirrorQueryInput.tsx
client/branded/src/search-ui/input/experimental/: CodeMirrorQueryInputWrapper.tsx  suggestionsExtension.ts
client/build-config/src/esbuild/: stylePlugin.ts
client/web/: BUILD.bazel  gulpfile.js
client/web-sveltekit/: package.json
client/web/dev/: BUILD.bazel
client/web/dev/esbuild/: BUILD.bazel  build.ts  manifestPlugin.ts
client/web/dev/utils/: environment-config.ts  get-index-html.ts
client/web/src/enterprise/codeintel/configuration/pages/: CodeIntelConfigurationPolicyPage.tsx
cmd/frontend/internal/app/ui/: handlers.go
dev/: esbuild.bzl
dev/codehost_testing/: BUILD.bazel  org.go  scenario.go
dev/update-embeddings-list/: package.json
doc/dev/background-information/sg/: reference.md
docker-images/prometheus-gcp/: Dockerfile
docker-images/syntax-highlighter/: Cargo.toml  rust-toolchain.toml
docker-images/syntax-highlighter/crates/bfg/: BUILD.bazel  Cargo.toml  cut-release.sh
docker-images/syntax-highlighter/crates/bfg/src/: context.rs  main.rs  types.rs
docker-images/syntax-highlighter/crates/bfg/testdata/typescript/: not-pog.ts
docker-images/syntax-highlighter/crates/cody-rpc/: Cargo.toml
docker-images/syntax-highlighter/crates/cody-rpc/queries/typescript/: context.scm
docker-images/syntax-highlighter/crates/cody-rpc/src/: context.rs  main.rs  types.rs
docker-images/syntax-highlighter/crates/cody-rpc/testdata/hello/: pog.ts
docker-images/syntax-highlighter/crates/cody-rpc/testdata/typescript/: main.ts
docker-images/syntax-highlighter/crates/lsp-server/: BUILD.bazel
docker-images/syntax-highlighter/crates/lsp-server/examples/: goto_def.rs
docker-images/syntax-highlighter/crates/lsp-server/src/: error.rs  lib.rs  msg.rs
docker-images/syntax-highlighter/crates/scip-syntax/queries/javascript/: scip-tags.scm
docker-images/syntax-highlighter/crates/scip-syntax/queries/typescript/: scip-tags.scm
docker-images/syntax-highlighter/crates/scip-syntax/src/: globals.rs
docker-images/syntax-highlighter/crates/scip-treesitter/src/: types.rs
internal/batches/service/: service.go  service_test.go
internal/completions/client/fireworks/: fireworks.go
internal/completions/httpapi/: codecompletion.go
internal/conf/: computed.go
internal/gitserver/: BUILD.bazel  client.go
third-party-licenses/: ThirdPartyLicenses.csv
ui/assets/: .gitignore
