[package]
name = "bfg"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = "0.50.1"

anyhow.workspace = true
scip.workspace = true
tree-sitter.workspace = true

lsp-server = { path = "../lsp-server" }
scip-syntax = { path = "../scip-syntax" }
scip-treesitter = { path = "../scip-treesitter" }
scip-macros = { path = "../scip-macros" }
scip-treesitter-languages = { path = "../scip-treesitter-languages" }

tower-lsp = "0.20.0"
serde_json.workspace = true
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.164", features = ["derive"] }
cast = { version = "0.3.0", features = [] }
lsp-types = "=0.94"
url = "2.4.1"
