[package]
name = "cody-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = "0.50.1"

scip.workspace = true
tree-sitter.workspace = true

scip-syntax = { path = "../scip-syntax" }
scip-treesitter = { path = "../scip-treesitter" }
scip-treesitter-languages = { path = "../scip-treesitter-languages" }
tabled = "0.14.0"
